Fix selectState logic and add caret expansion and collapse identifier on categories

--- a/src/app/components/pool/graphs/heatmap/legend/nodes-heatmap-legend.scss
+++ b/src/app/components/pool/graphs/heatmap/legend/nodes-heatmap-legend.scss
@@ -44,4 +44,8 @@ bl-nodes-heatmap-legend {
         width: $color-width;
         height: $color-width;
     }
+
+    .category-expansion {
+        padding-right: 5%;
+    }
 }
